# Examples

./: CMakeLists.txt  LICENSE  README.md  mmosbs.sln  mmosbs.vcxproj
amx_tests/: CMakeLists.txt  amx_tests.sln  amx_tests.vcxproj
amx_tests/src/: amx.h  bf16.h  defs.h  diff.h  gemm.h  gemm_amx.cpp  gemm_avx2.cpp  gemm_avx512bw.cpp  gemm_base.cpp  gemm_fp32.cpp  gemm_test.cpp  main.cpp  mat.h  perf_amx.cpp  shorts.cpp  test.h  test_amx.cpp  test_gemm.cpp  time.h
bf16_test/: bf16.h  bf16_test.sln  bf16_test.vcxproj  defs.h  test.cpp
convolution_direct/: CMakeLists.txt  convolution_direct.sln  convolution_direct.vcxproj
convolution_direct/src/: defs.h  test.cpp
cosine_distance/: cosine_distance.sln  cosine_distance.vcxproj
cosine_distance/data/: descriptors.txt
cosine_distance/src/: defs.h  descriptor.h  float16.h  test.cpp
cpu_st/: README.md
cpu_st/src/: defs.h  step2.cpp  step4.cpp  step5.cpp  step7.cpp
cuda/: CMakeLists.txt  mmosbs.vcxproj
cuda/src/: cublas.cpp  defs.h  step0.cu  step1.cu  step2.cu  step3.cu  step4.cu  step5.cu  step6.cu  step7.cu  step8.cu  test.cpp
cuda_tests/: cuda_tests.sln  graph_test.vcxproj
cuda_tests/graph_tests/: add_test.cpp  capture_test.cpp  cublas_test.cpp  defs.h  graph_tests.cpp  graph_tests.vcxproj  graph_tests.vcxproj.filters  nodes.cpp  nodes.cu  nodes.h  subgraph_test.cpp  tensor.h  tests.h  utils.cpp  utils.h
cuda_tests/src/: add_node.cu  buf.h  defs.h  graph_test.cpp  nodes.h  step7.cu  tensor.h  test.cpp  utils.cpp
deepstream_tests/Gst/: Args.h  Bus.h  Caps.h  Common.cpp  Common.h  Element.h  MainLoop.h  Options.h  Pipeline.h  SourceBin.h  Utils.cpp  Utils.h
deepstream_tests/data/color_0/: config.txt  config_custom_parse.txt
deepstream_tests/data/detect_0/: config.txt
deepstream_tests/deepstream-test1/: CMakeLists.txt  deepstream_test1_app.cpp
deepstream_tests/deepstream-test1/Gst/: Common.h
deepstream_tests/deepstream_decode/: CMakeLists.txt  deepstream_decode.cpp
deepstream_tests/deepstream_detect/: CMakeLists.txt  deepstream_detect.cpp
deepstream_tests/deepstream_image_detect/: CMakeLists.txt  deepstream_image_detect.cpp
deepstream_tests/deepstream_multi_detect/: CMakeLists.txt  deepstream_multi_detect.cpp
deepstream_tests/deepstream_transcode/: CMakeLists.txt  CMakeSettings.json  deepstream_transcode.cpp
erf_test/: defs.h  erf_test.sln  erf_test.vcxproj  test.cpp
gstreamer_tests/: gstreamer_tests.sln
gstreamer_tests/basic_tutorial/: args.h  basic_tutorial.cpp  basic_tutorial.h  basic_tutorial.vcxproj  basic_tutorial.vcxproj.filters  basic_tutorial_01.cpp  basic_tutorial_02.cpp  basic_tutorial_03.cpp  basic_tutorial_04.cpp  common.h  options.h  strings.h
gstreamer_tests/basic_tutorial/Gst/: Element.h
mmosbs_cpu_st/: README.md  mmosbs.vcxproj
mmosbs_cpu_st/src/: step1.cpp
mmosbs_cuda/: .gitignore  CMakeLists.txt  mmosbs.sln  mmosbs.vcxproj
mmosbs_cuda/src/: defs.h  step0.cu  step1.cu  step2.cu  step3.cu  step4.cu  step5.cu  step6.cu  step7.cu  step8.cu  test.cpp
sincos_test/: sincos_test.sln  test.cpp
skip_frame_test/: defs.h  skip_frame_test.sln  skip_frame_test.vcxproj  test.cpp
src/: defs.h  step0.cpp  step3.cpp  step6.cpp  test.cpp
thread_tests/: thread_tests.sln
thread_tests/read_write_test/: Data.h  Defs.h  Test.cpp  Test.h  TestAtomic.h  TestBase.h  TestMutex.h  TestStub.h  Utils.h  defs.h  read_write_test.vcxproj  test.cpp
xbyak_tests/: CMakeLists.txt  xbyak_tests.sln  xbyak_tests.vcxproj  xbyak_tests.vcxproj.filters
xbyak_tests/tests/: defs.h  test_add_2_fp32_vecs.cpp  test_add_2_ints.cpp  test_print.cpp  test_sgemm.cpp  test_struct.cpp  xbyak_tests.cpp
